--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+html,body{width: 100%;height: 100%;}
+*{padding: 0;margin: 0;box-sizing: border-box;
+  font: 14px/1.5 'Microsoft Yahei','Helvetica Neue',Tahoma,'Simsun',Arial,Helvetica,STHeiti;
+}
+li{list-style-type:none;}
